tests/tests/ui/relation_via_one_scoped_create.stderr
error[E0277]: this scope does not support scoped creation
  --> tests/ui/relation_via_one_scoped_create.rs:47:33
   |
47 |     let _ = user.subscription().create().plan("pro");
   |                                 ^^^^^^ this relation scope cannot create records
   |
help: the trait `toasty::schema::CreateScope` is not implemented for `_::OptionOne<toasty::schema::Via>`
  --> tests/ui/relation_via_one_scoped_create.rs:27:17
   |
27 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^
   = note: Only direct relation scopes support scoped creation.
   = note: Multi-step (`via`) relation scopes can be queried and filtered, but Toasty cannot create records through them because that would require creating or choosing intermediate records.
note: required by a bound in `_::OptionOne::<Kind>::create`
  --> tests/ui/relation_via_one_scoped_create.rs:27:17
   |
27 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^ required by this bound in `OptionOne::<Kind>::create`
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
